基础功能全部完成，LLM智能推荐初步完成